--- a/src/app/components/todo-input/todo-input.component.html
+++ b/src/app/components/todo-input/todo-input.component.html
@@ -2,7 +2,7 @@
     <input
       type="text"
       placeholder="Add a new task"
-      class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-400"
+      class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-400 text-black"
     />
     <button class="px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-500">
       Add
