--- a/src/app/components/todos-list/todos-list.component.html
+++ b/src/app/components/todos-list/todos-list.component.html
@@ -1,6 +1,8 @@
 <ul class="space-y-2">
+    @for (todo of todos; track $index) {
     <li class="flex items-center justify-between bg-gray-100 p-3 rounded-lg">
-        <span class="text-black">Todo</span>
+        <span class="text-black">{{todo.title}}</span>
         <button class="text-red-500 hover:text-red-700">Delete</button>
     </li>
+    }
 </ul>
